@@ -155,52 +155,6 @@ This directive cannot be used with <A
 HREF="#AllowUser"><CODE>AllowUser</CODE></A></P>
 
 
-<H2 CLASS="title"><SPAN CLASS="info">CUPS 1.2</SPAN><A NAME="ErrorPolicy">ErrorPolicy</A></H2>
-
-<H3>Examples</H3>
-
-<PRE CLASS="command">
-&lt;Class name&gt;
-  ...
-  ErrorPolicy abort-job
-&lt;/Class&gt;
-</PRE>
-
-<H3>Description</H3>
-
-<P>The <CODE>ErrorPolicy</CODE> directive defines the policy that
-is used when a backend is unable to send a print job to the
-printer. The <CODE>lpadmin(8)</CODE> command sets the current
-error policy:</P>
-
-<PRE CLASS="command">
-<KBD>/usr/sbin/lpadmin -p classname -o printer-error-policy=stop-printer</KBD>
-</PRE>
-
-<P>The following values are supported:</P>
-
-<UL>
-
-	<LI><CODE>abort-job</CODE> - Abort the job and proceed
-	with the next job in the queue</LI>
-
-	<LI><CODE>retry-job</CODE> - Retry the job after waiting
-	for N seconds; the <VAR>cupsd.conf</VAR> <A
-	HREF="ref-cupsd-conf.html#JobRetryInterval"><CODE>JobRetryInterval</CODE></A>
-	directive controls the value of N</LI>
-
-	<LI><CODE>stop-printer</CODE> - Stop the printer and keep
-	the job for future printing; this is the default
-	value</LI>
-
-</UL>
-
-<P>This directive must appear inside a <A
-HREF="#Class"><CODE>Class</CODE></A> or <A
-HREF="#DefaultClass"><CODE>DefaultClass</CODE></A>
-section.</P>
-
-
 <H2 CLASS="title"><A NAME="Info">Info</A></H2>
 
 <H3>Examples</H3>
