@@ -12,7 +12,7 @@
 .\"   which should have been included with this file.  If this file is
 .\"   file is missing or damaged, see the license at "http://www.cups.org/".
 .\"
-.TH classes.conf 5 "CUPS" "12 February 2006" "Apple Inc."
+.TH classes.conf 5 "CUPS" "29 April 2009" "Apple Inc."
 .SH NAME
 classes.conf \- class configuration file for cups
 .SH DESCRIPTION
@@ -46,14 +46,6 @@ Allows specific users and groups to print to the printer.
 DenyUser [ user @group ... ]
 .br
 Prevents specific users and groups from printing to the printer.
-.TP 5
-ErrorPolicy abort-job
-.TP 5
-ErrorPolicy retry-job
-.TP 5
-ErrorPolicy stop-printer
-.br
-Specifies the error policy for the printer.
 .TP 5
 Info text
 .br
